<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageProgressBar Demo</string>
    <string name="hello">Hello BlurProgress!</string>
    <string name="action_settings">Settings</string>
    <string name="action_blur">Blur</string>
    <string name="action_random_block">Random blocks</string>
    <string name="action_color_fill">Colorfiller</string>
    <string name="action_pixelize">Pixelize</string>
    <string name="action_circle">Circulator</string>
    <string name="action_alpha">Alpha</string>
    <string name="action_line">Random Stripes</string>
    <string name="action_spiral">Spiral</string>
    <string name="action_diagonal">Diagonal</string>
    <string name="action_snake">Snake</string>
    <string name="action_blocked_spiral">Blocked Spiral</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
</resources>